<resources>
    <string name="app_name">SCM</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register_short">Register</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid email</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="new_user">New user?</string>
    <string name="individual_plan">Individual plan</string>
    <string name="aggregate_plan">Aggregate plan</string>
    <string name="plan">Plan</string>
    <string name="your_name">Your name</string>
    <string name="card_num">5502 0102 5634</string>
    <string name="card_expire">MM/YY</string>
    <string name="expire">Expire</string>
    <string name="amount">Amount</string>
    <string name="remark">Remark</string>
    <string name="payment">Payment</string>
    <string name="full_name">Full name</string>
    <string name="username">Username</string>
    <string name="prompt_password_re_type">Re-type Password</string>
    <string name="gender">Gender</string>
    <string name="appbar_label_student_form">Student Form</string>
    <string name="save">Save</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_upload_file">Upload files</string>
    <string name="title_downloads">Downloads</string>
    <string name="title_notification">Notification</string>
    <string name="upload">Upload</string>
    <string name="file_name">File name</string>
    <string name="create_new">Create new</string>
    <string name="scan">Scan</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit?</string>
    <string name="want_exit">Are you sure you want to exit?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="phone_number">Phone number</string>
    <string name="profile_info">Profile Information</string>
    <string name="account_info">Account Information</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="capture">Capture</string>
    <string name="description">Description</string>
    <string name="file_details">File details</string>
    <string name="channel_description">My notification</string>
    <string name="authenticating">Authenticating</string>
    <string name="subject">Subject</string>
    <string name="course">Course</string>
    <string name="download">Download</string>
    <string name="grid">Grid view</string>
    <string name="list_view">List view</string>
    <string name="close_camera">Close camera</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="select_lang">Select language</string>
    <string name="theme">Theme</string>
    <string name="dark_theme">Dark</string>
    <string name="title_offline">Offline</string>
    <string name="level">Level</string>
    <string name="i">I</string>
    <string name="ii">II</string>
    <string name="iii">III</string>
    <string name="iv">IV</string>
    <string name="semester">Semester</string>
</resources>