<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_downloaded_files"
        android:icon="@drawable/ic_download"
        android:title="@string/title_downloads" />

    <item
        android:id="@+id/navigation_notification"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notification" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_outline_settings_24"
        android:title="@string/settings" />

</menu>