<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        android:contentDescription="@string/search"
        app:iconTint="@color/white"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView"/>

    <item
        android:id="@+id/grid_view"
        android:icon="@drawable/ic_grid_view"
        android:title="@string/grid"
        android:contentDescription="@string/grid"
        app:iconTint="@color/white"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/list_view"
        android:icon="@drawable/ic_list_view"
        android:title="@string/list_view"
        android:contentDescription="@string/list_view"
        android:visible="false"
        app:iconTint="@color/white"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/filter"
        android:title="@string/filter"
        android:icon="@drawable/ic_filter"
        android:contentDescription="@string/filter"
        app:showAsAction="ifRoom" />
</menu>