<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.cs.schoolcontentmanager.presenters.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_file_manager" />

    <fragment
        android:id="@+id/navigation_downloaded_files"
        android:name="com.cs.schoolcontentmanager.presenters.ui.home.download.DownloadedFilesFragment"
        android:label="@string/title_offline"
        tools:layout="@layout/fragment_file_manager" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.cs.schoolcontentmanager.presenters.ui.settings.SettingsFragment"
        android:label="@string/settings" />
</navigation>