<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp">

    <Space
        android:layout_width="match_parent"
        android:layout_height="7dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/courses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
        android:hint="@string/course">
        <AutoCompleteTextView
            android:id="@+id/course_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            tools:ignore="LabelFor"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/level"
        android:textStyle="bold|italic"
        android:textSize="14sp"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="7dp" />


    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/levels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:singleSelection="true">
        <Button
            android:id="@+id/level1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/i"
            style="?attr/materialButtonOutlinedStyle"
            />
        <Button
            android:id="@+id/level2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ii"
            style="?attr/materialButtonOutlinedStyle"
            />
        <Button
            android:id="@+id/level3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/iii"
            style="?attr/materialButtonOutlinedStyle"
            />
        <Button
            android:id="@+id/level4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/iv"
            style="?attr/materialButtonOutlinedStyle"
            />
    </com.google.android.material.button.MaterialButtonToggleGroup>

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/semester"
        android:textStyle="bold|italic"
        android:textSize="14sp"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="7dp" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/semesters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:singleSelection="true">
        <Button
            android:id="@+id/semester1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/i"
            style="?attr/materialButtonOutlinedStyle"
            />
        <Button
            android:id="@+id/semester2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ii"
            style="?attr/materialButtonOutlinedStyle"
            />
    </com.google.android.material.button.MaterialButtonToggleGroup>

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="7dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/subjects"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
        android:hint="@string/subject">
        <AutoCompleteTextView
            android:id="@+id/subject_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            tools:ignore="LabelFor"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary"
        android:textSize="16sp"
        android:text="@string/search"
        android:textColor="@color/white"/>
</LinearLayout>