<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_new"
        android:textAlignment="center"
        android:textSize="20sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <ImageButton
                android:id="@+id/btn_upload"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:padding="10dp"
                android:background="@drawable/circle"
                android:src="@drawable/ic_cloud_upload"
                android:contentDescription="@string/upload"
                app:tint="@color/colorPrimary" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="12dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_upload_file"
                android:textSize="14sp" />
        </LinearLayout>

        <Space
            android:layout_width="35dp"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <ImageButton
                android:id="@+id/btn_scan"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:padding="10dp"
                android:background="@drawable/circle"
                android:src="@drawable/ic_scan"
                android:contentDescription="@string/scan"
                app:tint="@color/colorPrimary" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="12dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scan"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="50dp" />
</LinearLayout>