<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E6E6E6"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/bt_close"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/selectableItemBackgroundBorderless"
                app:srcCompat="@drawable/ic_back"
                app:tint="@color/white" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/appbar_label_student_form"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                android:textColor="@android:color/white" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bt_save"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/save"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:scrollingCache="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_info"
                android:textColor="@color/blue_grey_800"
                style="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:drawablePadding="20dp"
                app:drawableStartCompat="@drawable/ic_baseline_circle_24"
                app:drawableTint="#005F80"/>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:cardCornerRadius="0dp"
                app:cardElevation="3dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/full_name"
                        android:inputType="text"
                        android:theme="@style/EditText.White"
                        android:backgroundTint="@color/white"
                        android:layout_margin="5dp"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@color/blue_grey_800"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                        android:textColorHint="@color/grey_40"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.001dp"
                        android:background="@color/grey_10" />

                    <Spinner
                        android:id="@+id/spn_gender"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="visible"
                        android:outlineProvider="background"
                        android:touchscreenBlocksFocus="true"
                        android:layerType="software"
                        android:layout_margin="5dp"
                        android:defaultFocusHighlightEnabled="true"
                        style="@style/Widget.AppCompat.Light.DropDownItem.Spinner"
                        tools:ignore="UnusedAttribute"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.001dp"
                        android:background="@color/grey_10" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_contact"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/phone_number"
                        android:inputType="phone"
                        android:theme="@style/EditText.White"
                        android:backgroundTint="@color/white"
                        android:layout_margin="5dp"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@color/blue_grey_800"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                        android:textColorHint="@color/grey_40" />
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/account_info"
                android:textColor="@color/blue_grey_800"
                style="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:drawablePadding="20dp"
                app:drawableStartCompat="@drawable/ic_baseline_circle_24"
                app:drawableTint="#005F80" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                app:cardCornerRadius="0dp"
                app:cardElevation="3dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_email"
                        android:inputType="textEmailAddress"
                        android:theme="@style/EditText.White"
                        android:backgroundTint="@color/white"
                        android:layout_margin="5dp"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@color/blue_grey_800"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                        android:textColorHint="@color/grey_40" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.001dp"
                        android:background="@color/grey_10" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.001dp"
                        android:background="@color/grey_10" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_password"
                        android:inputType="textPassword"
                        android:theme="@style/EditText.White"
                        android:backgroundTint="@color/white"
                        android:layout_margin="5dp"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@color/blue_grey_800"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                        android:textColorHint="@color/grey_40" />
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>