<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardElevation="0dp"
    app:cardCornerRadius="10dp"
    app:strokeWidth="1dp"
    app:strokeColor="@color/grey_20"
    android:visibility="gone"
    tools:visibility="visible">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerInParent="true"
                android:contentDescription="@null"
                android:scaleType="centerCrop"
                android:src="@drawable/excel_144" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/spacing_large">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/file_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/file_name"
                    android:maxLines="2"
                    android:textAlignment="center"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/grey_90"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/file_subject"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_small"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@string/subject"
                    android:textAlignment="center"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                    android:textColor="@color/grey_40" />

            </LinearLayout>

            <View
                android:layout_width="@dimen/spacing_large"
                android:layout_height="0dp" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/download"
                app:tint="@color/green_21"
                app:srcCompat="@drawable/download_from_cloud_48" />

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>